# akahu-client

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  toml.yaml
examples/: accounts.rs  list_accounts.rs  list_transactions.rs  refresh.rs  transactions.rs
src/: bank_account_number.rs  client.rs  error.rs  lib.rs  serde.rs  types.rs
src/client/: accounts.rs  auth.rs  categories.rs  connections.rs  core.rs  me.rs  mod.rs  payments.rs  refresh.rs  support.rs  transactions.rs  transfers.rs
src/http/: mod.rs  reqwest_client.rs  util.rs
src/models/: account.rs  auth.rs  category.rs  connection.rs  identity.rs  me.rs  mod.rs  payments.rs  scopes.rs  support.rs  transaction.rs  transfers.rs
