[package]
name = "akahu-client"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bon = "3.8.1"
chrono = { version = "0.4.42",  features = ["serde"] }
iso_currency = { version = "0.5.3", default-features = false, features = ["with-serde"] }
nzfcc = {version="1", default-features = false, features = ["serde"]}
reqwest = { version = "0.13.1",  features = ["json"] }
rust_decimal = { version = "1.39.0", default-features = false, features = ["std", "serde", "serde-arbitrary-precision"] }
serde = "1.0.228"
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
url = { version = "2.5.7", default-features = false, features = ["serde"] }
