[package]
name = "akahu-client"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde", "alloc", "std"] }
iso_currency = { version = "0.5", default-features = false, features = ["with-serde"] }
nzfcc = {version="1", default-features = false, features = ["serde"]}
reqwest = { version = "0.13", default-features = false, features = ["json", "default-tls"] }
rust_decimal = { version = "1", default-features = false, features = ["std", "serde", "serde-arbitrary-precision"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = { version = "2", default-features = false, features = ["serde"] }

[dev-dependencies]
clap = { version = "4", default-features = false, features = ["derive", "env", "std", "help", "usage", "error-context"] }
anyhow = { version = "1", default-features = false, features = ["std"] }
